# SPE-project

./: .gitignore  README.md  exec_batch.sh  exec_run.sh  pyproject.toml  requirements.txt  run_batch.sh  run_batch2.sh  stdout.txt
logs/: log_cluster-tree_harsh_20nodes.txt  log_cluster-tree_harsh_unstable_20nodes.txt  log_cluster-tree_medium_20nodes.txt  log_cluster-tree_medium_lossy_20nodes.txt  log_cluster-tree_stable_20nodes.txt  log_grid_harsh_20nodes.txt  log_grid_harsh_unstable_20nodes.txt  log_grid_medium_20nodes.txt  log_grid_medium_lossy_20nodes.txt  log_grid_stable_20nodes.txt  log_linear_harsh_20nodes.txt  log_linear_harsh_unstable_20nodes.txt  log_linear_medium_20nodes.txt  log_linear_medium_lossy_20nodes.txt  log_linear_stable_20nodes.txt  log_random_harsh_20nodes.txt  log_random_harsh_unstable_20nodes.txt  log_random_medium_20nodes.txt  log_random_medium_lossy_20nodes.txt  log_random_stable_20nodes.txt  log_ring_harsh_20nodes.txt  log_ring_harsh_unstable_20nodes.txt  log_ring_medium_20nodes.txt  log_ring_medium_lossy_20nodes.txt  log_ring_stable_20nodes.txt  log_star_harsh_20nodes.txt  log_star_harsh_unstable_20nodes.txt  log_star_medium_20nodes.txt  log_star_medium_lossy_20nodes.txt  log_star_stable_20nodes.txt
slides/: slides.tex
src/: test.ipynb
src/evaluation/: analisys.ipynb  arn_test.py  check_antithetic.ipynb  debug_link_budget.py  hop_stretch.ipynb  main.py  main_harsh.py  main_harsh_multihop.py  main_multihop.py  pingpong.py  plot_scenario.py  process_results.ipynb  report_plots.ipynb  run_batch.py  run_scenario.py  run_simulation.py  (+6 more)
(+189 files in other folders)
